feat: Adição da funcionalidade de mensagem de confirmação de envio de formulário     - views.py: Adição da função usando o Django Messages Framework     - home.html: Adição do código para exibir a mensagem dentro de um 'if' e um 'for' e inserindo a chamada do script de mensagem     - base-topics.html: Deixando o navbar estático sem desaperecer na tela     - topico.html: Troca do base.html pelo base-topics.html     - message.js: Adição de script para ocultar a mensagem de confirmação de envio de formulário após um certo tempo

--- a/class01/class01/templates/base-topics.html
+++ b/class01/class01/templates/base-topics.html
@@ -15,7 +15,7 @@
 
 <body class="leading-normal tracking-normal bg-slate-50 dark:bg-slate-800 font-poppins">
 
-<nav class="bg-white border-gray-200 dark:bg-gray-900">
+<nav class="sticky top-0 z-20 bg-white border-gray-200 start-0 dark:bg-gray-900">
     <div class="flex flex-wrap items-center justify-between max-w-screen-xl p-4 mx-auto">
         <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
             <img src={% static 'img/logo.png' %} class="h-10" alt="Class01 Logo">
@@ -104,7 +104,6 @@
 <script src="{% static 'js/theme.js' %}"></script>
 <script src="{% static 'js/animation.js' %}"></script>
 <script src="{% static 'js/chatbot.js' %}"></script>
-<script src="{% static 'js/typing.js' %}"></script>
 
 <div vw class="enabled">
   <div vw-access-button class="active"></div>
