--- a/class01/home/templates/home.html
+++ b/class01/home/templates/home.html
@@ -230,6 +230,58 @@
             </div>
         </section>
 
+        {% if messages %}
+            <ul class="messages">
+                {% for message in messages %}
+                    <li>
+                        <div role="alert" id="message-container" class="fixed left-0 right-0 p-4 mx-auto bg-white border border-gray-100 bottom-4 w-80 rounded-xl">
+                            <div class="flex items-start gap-4">
+                              <span class="text-green-600">
+                                <svg
+                                  xmlns="http://www.w3.org/2000/svg"
+                                  fill="none"
+                                  viewBox="0 0 24 24"
+                                  stroke-width="1.5"
+                                  stroke="currentColor"
+                                  class="size-6"
+                                >
+                                  <path
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                    d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
+                                  />
+                                </svg>
+                              </span>
+                          
+                              <div class="flex-1">
+                                <strong class="block font-medium text-gray-900"> Sucesso! </strong>
+                          
+                                <p class="mt-1 text-sm text-gray-700">{{ message }}</p>
+                              </div>
+                          
+                              <button class="text-gray-500 transition hover:text-gray-600">
+                                <span class="sr-only">Dismiss popup</span>
+                          
+                                <svg
+                                  xmlns="http://www.w3.org/2000/svg"
+                                  fill="none"
+                                  viewBox="0 0 24 24"
+                                  stroke-width="1.5"
+                                  stroke="currentColor"
+                                  class="size-6"
+                                >
+                                  <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
+                                </svg>
+                              </button>
+                            </div>
+                        </div>
+                    </li>
+                {% endfor %}
+            </ul>
+        {% endif %}
+
+    <script src="{% static 'js/message.js' %}"></script>
+
     {% endblock %}
 
 </body>
