--- a/class01/home/templates/home.html
+++ b/class01/home/templates/home.html
@@ -234,46 +234,11 @@
             <ul class="messages">
                 {% for message in messages %}
                     <li>
-                        <div role="alert" id="message-container" class="fixed left-0 right-0 p-4 mx-auto bg-white border border-gray-100 bottom-4 w-80 rounded-xl">
-                            <div class="flex items-start gap-4">
-                              <span class="text-green-600">
-                                <svg
-                                  xmlns="http://www.w3.org/2000/svg"
-                                  fill="none"
-                                  viewBox="0 0 24 24"
-                                  stroke-width="1.5"
-                                  stroke="currentColor"
-                                  class="size-6"
-                                >
-                                  <path
-                                    stroke-linecap="round"
-                                    stroke-linejoin="round"
-                                    d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
-                                  />
-                                </svg>
-                              </span>
-                          
-                              <div class="flex-1">
-                                <strong class="block font-medium text-gray-900"> Sucesso! </strong>
-                          
-                                <p class="mt-1 text-sm text-gray-700">{{ message }}</p>
-                              </div>
-                          
-                              <button class="text-gray-500 transition hover:text-gray-600">
-                                <span class="sr-only">Dismiss popup</span>
-                          
-                                <svg
-                                  xmlns="http://www.w3.org/2000/svg"
-                                  fill="none"
-                                  viewBox="0 0 24 24"
-                                  stroke-width="1.5"
-                                  stroke="currentColor"
-                                  class="size-6"
-                                >
-                                  <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
-                                </svg>
-                              </button>
-                            </div>
+                        <div id="message-container" class="fixed left-0 right-0 flex items-center w-full max-w-sm p-4 mx-auto space-x-4 text-gray-500 bg-gray-300 divide-x divide-gray-200 rounded-lg shadow bottom-4 rtl:space-x-reverse rtl:divide-x-reverse dark:text-gray-400 dark:divide-gray-700 dark:bg-gray-700" role="alert">
+                            <svg class="w-5 h-5 text-green-600 rotate-45 dark:text-green-500" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 18 20">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m9 17 8 2L9 1 1 19l8-2Zm0 0V9"/>
+                            </svg>
+                            <div class="text-sm font-normal ps-4">{{ message }}</div>
                         </div>
                     </li>
                 {% endfor %}
