--- a/class01/home/templates/home.html
+++ b/class01/home/templates/home.html
@@ -244,8 +244,13 @@
                 {% endfor %}
             </ul>
         {% endif %}
+        
+        <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+        
+        <script src="{% static 'js/typing.js' %}"></script>
+        <script src="{% static 'js/message.js' %}"></script>
+        <script src="{% static 'js/theme.js' %}"></script>
 
-    <script src="{% static 'js/message.js' %}"></script>
 
     {% endblock %}
 
