style: Alteração da estilização dos cards da tela inicial     - Remoção dos códigos de estilo do arquivo do tailwind e deixando dentro da pasta static     - Renomeação do arquivo de animação para 'animation-gsap.js'

--- a/class01/class01/templates/base.html
+++ b/class01/class01/templates/base.html
@@ -9,6 +9,9 @@
     <title>Class 01{% block title %} {% endblock %}</title>
     
     {% tailwind_css %}
+
+    <!-- Estlização separada dos cards da tela inicial -->
+    <link rel="stylesheet" href="{% static 'css/cards-style.css' %}">
     
     <link rel="shortcut icon" href="{% static 'img/logo.icon1.png' %}" type="image/x-icon">
   </head>
