--- a/class01/home/templates/home.html
+++ b/class01/home/templates/home.html
@@ -12,7 +12,7 @@
         <section id="section1" class="flex flex-col items-center w-full mx-auto bg-gray-50 dark:bg-gray-900 lg:flex-row lg:h-screen xs:h-auto">
             <div id="text-home" class="flex flex-col mx-10 mb-16 lg:w-1/2 xs:w-4/5">
                 <div class="flex flex-col text-gray-900 xs:w-full dark:text-white">
-                    <h1 class="text-4xl font-medium text-center md:text-left"><span id="frase"></span></h1>
+                    <h1 class="text-4xl font-medium text-center md:text-left min-h-20"><span id="frase"></span></h1>
                     <p class="mt-4 mb-2 text-lg text-center md:text-left text-wrap">Explore os fundamentos da programação e inicie sua jornada dentro da indústria tech.</p>
                 </div>
 
@@ -50,6 +50,21 @@
             <h2 id="title-topic" class="my-5 text-4xl font-medium text-center">Explore tópicos de programação</h2>
             <p id="text-topic" class="mx-4 my-5 text-lg text-center">Mergulhe nos principais conceitos e habilidades necessárias para se tornar um programador de sucesso!</p>
 
+            <div>
+                <form class="max-w-md mx-auto mt-5" method="get" action="{% url 'all_topics' %}">
+                    <label for="default-search" class="mb-2 text-sm font-medium text-gray-900 sr-only dark:text-white">Search</label>
+                    <div class="relative">
+                        <div class="absolute inset-y-0 flex items-center pointer-events-none start-0 ps-3">
+                            <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
+                            </svg>
+                        </div>
+                        <input type="search" name="search" id="default-search" class="block w-full p-4 text-sm text-gray-900 border border-gray-300 rounded-lg ps-10 bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Pesquise por tópicos..." required />
+                        <button type="submit" class="text-white absolute end-2.5 bottom-2.5 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Pesquisar</button>
+                    </div>
+                </form>
+            </div>
+
             <div class="containers">
                 <div class="card__container">
                     {% for topico in topicos %}
@@ -61,7 +76,7 @@
                                     <li class="text-xs text-green-700 card__description">#{{ tag.nome }}</li>
                                 {% endfor %}
                                 <h2 class="card__title">{{ topico.nome_topico }}</h2>
-                                <a href="{% url 'exibir_topico' topico.id %}" class="text-base text-blue-500 card__button">Read More</a>
+                                <a href="{% url 'exibir_topico' topico.id %}" class="text-base text-blue-500 card__button">Veja mais</a>
                             </div>
                         </article>
                     {% endfor %}
