--- a/class01/home/templates/home.html
+++ b/class01/home/templates/home.html
@@ -12,7 +12,7 @@
         <section id="section1" class="flex flex-col items-center w-full mx-auto bg-gray-50 dark:bg-gray-900 lg:flex-row lg:h-screen xs:h-auto">
             <div id="text-home" class="flex flex-col mx-10 mb-16 lg:w-1/2 xs:w-4/5">
                 <div class="flex flex-col text-gray-900 xs:w-full dark:text-white">
-                    <h1 class="text-4xl font-medium text-center md:text-left min-h-20"><span id="frase"></span></h1>
+                    <h1 class="text-4xl font-medium text-center md:text-left"><span id="frase"></span></h1>
                     <p class="mt-4 mb-2 text-lg text-center md:text-left text-wrap">Explore os fundamentos da programação e inicie sua jornada dentro da indústria tech.</p>
                 </div>
 
