feat: Adição de todos os tópicos ao banco de dados e remoção do chatbot provisoramente

--- a/class01/home/templates/home.html
+++ b/class01/home/templates/home.html
@@ -16,7 +16,7 @@
                 </div>
 
                 <div class="flex xs:flex-row">
-                    <a href="{% url 'exibir_topico' 5 %}">
+                    <a href="{% url 'exibir_topico' first_item %}">
                         <button type="submit" class="flex flex-row px-5 py-3 mt-6 text-base font-medium text-center text-blue-700 transition duration-300 bg-white border-2 border-blue-600 rounded-lg md:ml-0 hover:bg-blue-600 hover:text-white dark:border-white dark:bg-white dark:hover:border-blue-600 dark:hover:bg-blue-700 dark:hover:text-white ">Comece agora
                             <span class="my-auto ml-2">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
