--- a/class01/home/templates/home.html
+++ b/class01/home/templates/home.html
@@ -16,6 +16,7 @@
                 </div>
 
                 <div class="flex xs:flex-row">
+                    {% if first_item %}
                     <a href="{% url 'exibir_topico' first_item %}">
                         <button type="submit" class="flex flex-row px-5 py-3 mt-6 text-base font-medium text-center text-blue-700 transition duration-300 bg-white border-2 border-blue-600 rounded-lg md:ml-0 hover:bg-blue-600 hover:text-white dark:border-white dark:bg-white dark:hover:border-blue-600 dark:hover:bg-blue-700 dark:hover:text-white ">Comece agora
                             <span class="my-auto ml-2">
@@ -25,6 +26,17 @@
                             </span>
                         </button>
                     </a>
+                    {% else %}
+                    <a href="{% url 'all_topics' %}"></a>
+                        <button type="submit" class="flex flex-row px-5 py-3 mt-6 text-base font-medium text-center text-blue-700 transition duration-300 bg-white border-2 border-blue-600 rounded-lg md:ml-0 hover:bg-blue-600 hover:text-white dark:border-white dark:bg-white dark:hover:border-blue-600 dark:hover:bg-blue-700 dark:hover:text-white ">Comece agora
+                            <span class="my-auto ml-2">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="M15.042 21.672 13.684 16.6m0 0-2.51 2.225.569-9.47 5.227 7.917-3.286-.672ZM12 2.25V4.5m5.834.166-1.591 1.591M20.25 10.5H18M7.757 14.743l-1.59 1.59M6 10.5H3.75m4.007-4.243-1.59-1.59" />
+                                </svg>                                  
+                            </span>
+                        </button>
+                    </a>
+                    {% endif %}
 
                     <a href="#section3">
                         <button type="submit" class="flex flex-row px-5 py-3 mt-6 ml-6 text-base font-medium text-center text-white transition duration-300 bg-blue-700 border-2 rounded-lg hover:bg-white hover:border-blue-600 hover:text-blue-600 dark:bg-blue-700 dark:hover:bg-white dark:hover:text-blue-700 dark:border-blue-600 dark:hover:border-white ">Fale conosco
