--- a/class01/class01/templates/base-unit.html
+++ b/class01/class01/templates/base-unit.html
@@ -17,48 +17,51 @@
 
 <!-- Navbar -->
 <nav class="sticky top-0 z-20 bg-white border-gray-200 start-0 dark:bg-gray-900">
-    <div class="flex flex-wrap items-center justify-between max-w-screen-xl p-4 mx-auto">
+    <div class="flex flex-wrap items-center justify-around max-w-screen-xl p-4 mx-auto">
 
-        <!-- Logo do site -->
        <div class="flex flex-row justify-between">
-         <!-- Sidebar -->
-         <div>
-            <button class=" font-medium rounded-lg text-sm px-5 py-2.5 " type="button" id="menu-btn">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-6">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
-                </svg>
-                <span class="sr-only">Open sidebar</span>          
-            </button>
-        </div>
+          <!-- Sidebar -->
+          <div>
+              <button class=" font-medium rounded-lg text-sm px-5 py-2.5 " type="button" id="menu-btn">
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-6">
+                      <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+                  </svg>
+                  <span class="sr-only">Open sidebar</span>          
+              </button>
+          </div>
   
-        <!-- drawer component -->
-        <div id="drawer-navigation" class="fixed top-0 left-0 z-40 w-64 h-screen p-4 overflow-y-auto transition-transform -translate-x-full bg-slate-50 dark:bg-slate-900" tabindex="-1" aria-labelledby="drawer-navigation-label">
-            <div class="flex flex-row justify-between">
-                <h5 id="drawer-navigation-label" class="text-base font-semibold text-white uppercase dark:text-gray-400">Tópicos</h5>
-                <button type="button" id="close-btn" class="right-0 text-white">
-                    <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
-                    <span class="sr-only">Close menu</span>
-                </button>
-            </div>
-            <div class="py-4 overflow-y-auto">
-                <ul class="space-y-2 font-medium">
-                    {% for topico in topicos %}
-                    <li>
-                        <a href="{% url 'exibir_topico' topico.id %}" class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
-                            <img src="{{ topico.icon_topico.url }}" class="w-5" alt="">
-                            <p class="ms-3">{{ topico.nome_topico }}</p>
-                        </a>
-                    </li>
-                    {% endfor %}
-                </ul>
-            </div>
+          <!-- drawer component -->
+          <div id="drawer-navigation" class="fixed top-0 left-0 z-40 w-64 h-screen p-4 overflow-y-auto transition-transform -translate-x-full bg-slate-50 dark:bg-slate-900" tabindex="-1" aria-labelledby="drawer-navigation-label">
+              <div class="flex flex-row justify-between">
+                  <h5 id="drawer-navigation-label" class="text-base font-semibold text-white uppercase dark:text-gray-400">Tópicos</h5>
+                  <button type="button" id="close-btn" class="right-0 text-white">
+                      <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
+                      <span class="sr-only">Close menu</span>
+                  </button>
+              </div>
+              <div class="py-4 overflow-y-auto">
+                  <ul class="space-y-2 font-medium">
+                      {% for topico in topicos %}
+                      <li>
+                          <a href="{% url 'exibir_topico' topico.id %}" class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
+                              <img src="{{ topico.icon_topico.url }}" class="w-5" alt="">
+                              <p class="ms-3">{{ topico.nome_topico }}</p>
+                          </a>
+                      </li>
+                      {% endfor %}
+                  </ul>
+              </div>
+          </div>
         </div>
 
-        <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
+        <div class="flex mx-auto">
+          <!-- Logo do site -->
+          <a href="/" class="flex items-center mx-auto space-x-3 rtl:space-x-reverse">
             <img src="{% static 'img/logo.png' %}" class="h-10" alt="Class01 Logo">
             <span class="self-center text-2xl font-semibold text-gray-900 whitespace-nowrap dark:text-white">Class<span class="text-blue-600">01</span></span>
         </a>
-       </div>
+        </div>
+
         <div class="flex md:order-2">
           <button type="button" data-collapse-toggle="navbar-search" aria-controls="navbar-search" aria-expanded="false" class="md:hidden text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5 me-1">
               <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
