feat: Adição de script para acessibilidade (aumentar tamanho da fonte) e alterações na velocidade de abertura da sidebar

--- a/class01/class01/templates/base.html
+++ b/class01/class01/templates/base.html
@@ -89,6 +89,7 @@
   <!-- Scripts -->
   <script src="{% static 'js/animation-gsap.js' %}"></script>
   <script src="{% static 'js/chatbot.js' %}"></script>
+  <script src="{% static 'js/fonts.js' %}"></script>
 
   <!-- Ferramenta de acessibilidade -->
   <div vw class="enabled">
