--- a/class01/class01/templates/base-unit.html
+++ b/class01/class01/templates/base-unit.html
@@ -31,7 +31,7 @@
           </div>
   
           <!-- drawer component -->
-          <div id="drawer-navigation" class="fixed top-0 left-0 z-40 w-64 h-screen p-4 overflow-y-auto transition-transform -translate-x-full bg-slate-50 dark:bg-slate-900" tabindex="-1" aria-labelledby="drawer-navigation-label">
+          <div id="drawer-navigation" class="fixed top-0 left-0 z-40 w-64 h-screen p-4 overflow-y-auto transition-transform duration-500 -translate-x-full bg-slate-50 dark:bg-slate-900" tabindex="-1" aria-labelledby="drawer-navigation-label">
               <div class="flex flex-row justify-between">
                   <h5 id="drawer-navigation-label" class="text-base font-semibold text-white uppercase dark:text-gray-400">Tópicos</h5>
                   <button type="button" id="close-btn" class="right-0 text-white">
