--- a/class01/class01/templates/base.html
+++ b/class01/class01/templates/base.html
@@ -73,6 +73,30 @@
   <!-- Seção principal do site -->
   <main>{% block content %} {% endblock %}</main>
 
+  <!-- component -->
+  <div class = "fixed bottom-0 right-0 flex items-end justify-end w-24 h-24 p-2 group ">
+    <div class = "absolute z-50 flex items-center justify-center p-3 text-white rounded-full shadow-xl bg-gradient-to-r from-cyan-500 to-blue-800 ">
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 group-hover:rotate-90   transition-all duration-[0.6s]">
+        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" stroke="#CCCCCC" stroke-width="1.104"></g><g id="SVGRepo_iconCarrier"> <path d="M14 7C14 8.10457 13.1046 9 12 9C10.8954 9 10 8.10457 10 7C10 5.89543 10.8954 5 12 5C13.1046 5 14 5.89543 14 7Z" stroke="#ffffff" stroke-width="1.5"></path> <path d="M18 10C18 10 14.4627 11.5 12 11.5C9.53727 11.5 6 10 6 10" stroke="#ffffff" stroke-width="1.5" stroke-linecap="round"></path> <path d="M12 12V13.4522M12 13.4522C12 14.0275 12.1654 14.5906 12.4765 15.0745L15 19M12 13.4522C12 14.0275 11.8346 14.5906 11.5235 15.0745L9 19" stroke="#ffffff" stroke-width="1.5" stroke-linecap="round"></path> <path d="M7 3.33782C8.47087 2.48697 10.1786 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 10.1786 2.48697 8.47087 3.33782 7" stroke="#ffffff" stroke-width="1.5" stroke-linecap="round"></path> </g></svg>
+      </svg>
+  </div>
+  <!-- button 1 -->
+  <div class="absolute rounded-full transition-all duration-[0.2s] ease-out scale-x-0 group-hover:scale-x-100 group-hover:-translate-y-16  flex  p-2 hover:p-3 bg-blue-500 hover:bg-blue-600  text-white">
+    <button title="Monocromático" class="p-2 text-white bg-transparent rounded-lg" onclick="document.documentElement.classList.toggle('grayscale')">
+      <svg fill="#fafafa" viewBox="0 0 24 24" class="w-6" xmlns="http://www.w3.org/2000/svg" data-name="Layer 1"  stroke="#fafafa"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier">
+        <path d="M21.71,20.29l-18-18A1,1,0,0,0,2.29,3.71l4,4a12.46,12.46,0,0,0-2,6.57A7.76,7.76,0,0,0,12,22a7.64,7.64,0,0,0,5.87-2.71l2.42,2.42a1,1,0,0,0,1.42,0A1,1,0,0,0,21.71,20.29ZM12,20a5.76,5.76,0,0,1-5.75-5.75A10.3,10.3,0,0,1,7.72,9.14l8.74,8.73A5.67,5.67,0,0,1,12,20ZM10.85,5.24c.45-.42.85-.75,1.15-1,1.43,1.12,5.13,4.43,5.68,8.88a1,1,0,0,0,1,.88h.12a1,1,0,0,0,.87-1.11c-.78-6.43-6.85-10.55-7.1-10.72a1,1,0,0,0-1.12,0A18.73,18.73,0,0,0,9.49,3.78a1,1,0,0,0,1.36,1.46Z"></path></g>
+      </svg>
+    </button>
+  </div>
+  <!-- button 2 -->
+  <div title="Contraste" class="absolute rounded-full transition-all duration-[0.2s] ease-out scale-x-0 group-hover:scale-x-100 group-hover:-translate-y-32  flex  p-2 hover:p-3 bg-blue-500 hover:bg-blue-600  text-white">
+    <button class="p-2 text-white bg-transparent rounded-lg" onclick="document.documentElement.classList.toggle('invert')">
+      <svg viewBox="0 0 15 15" fill="none" class="w-6" xmlns="http://www.w3.org/2000/svg" stroke="#ffffff"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier">
+        <path d="M0.5 12.5L0.146447 12.1465L0 12.2929V12.5H0.5ZM8 5L8.35355 4.64645C8.15829 4.45119 7.84171 4.45119 7.64645 4.64645L8 5ZM10 7L10.3536 7.35356C10.5488 7.1583 10.5488 6.84171 10.3536 6.64645L10 7ZM2.5 14.5V15H2.70711L2.85355 14.8536L2.5 14.5ZM0.5 14.5H0C0 14.7761 0.223858 15 0.5 15L0.5 14.5ZM7.5 4.5L7.14645 4.14645L6.79289 4.5L7.14645 4.85356L7.5 4.5ZM10.5858 1.41422L10.2322 1.06066L10.5858 1.41422ZM13.4142 1.41422L13.0607 1.76777L13.0607 1.76777L13.4142 1.41422ZM13.5858 1.58579L13.9393 1.23224L13.9393 1.23224L13.5858 1.58579ZM13.5858 4.41422L13.2322 4.06066L13.5858 4.41422ZM10.5 7.5L10.1464 7.85356L10.5 8.20711L10.8536 7.85356L10.5 7.5ZM0.853553 12.8536L8.35355 5.35356L7.64645 4.64645L0.146447 12.1465L0.853553 12.8536ZM7.64645 5.35356L9.64645 7.35356L10.3536 6.64645L8.35355 4.64645L7.64645 5.35356ZM9.64645 6.64645L2.14645 14.1465L2.85355 14.8536L10.3536 7.35356L9.64645 6.64645ZM2.5 14H0.5V15H2.5V14ZM1 14.5V12.5H0V14.5H1ZM6.14645 3.85356L11.1464 8.85356L11.8536 8.14645L6.85355 3.14645L6.14645 3.85356ZM7.85355 4.85356L10.9393 1.76777L10.2322 1.06066L7.14645 4.14645L7.85355 4.85356ZM13.0607 1.76777L13.2322 1.93934L13.9393 1.23224L13.7678 1.06066L13.0607 1.76777ZM13.2322 4.06066L10.1464 7.14645L10.8536 7.85356L13.9393 4.76777L13.2322 4.06066ZM10.8536 7.14645L7.85355 4.14645L7.14645 4.85356L10.1464 7.85356L10.8536 7.14645ZM13.2322 1.93934C13.818 2.52513 13.818 3.47488 13.2322 4.06066L13.9393 4.76777C14.9157 3.79146 14.9156 2.20855 13.9393 1.23224L13.2322 1.93934ZM10.9393 1.76777C11.5251 1.18198 12.4749 1.18198 13.0607 1.76777L13.7678 1.06066C12.7915 0.0843534 11.2085 0.0843515 10.2322 1.06066L10.9393 1.76777Z" fill="#000000"></path> </g>
+      </svg>
+    </button>
+    </div>
+  </div>
 
   <!-- Rodapé -->
   <footer class="m-4 bg-white rounded-lg shadow dark:bg-slate-900">
