style: Alterações em estilos e layouts

--- a/class01/home/templates/all_topics.html
+++ b/class01/home/templates/all_topics.html
@@ -42,7 +42,7 @@
     </div>
 
     <div class="flex w-full mx-auto my-10">
-        <ul class="grid mx-auto my-6 lg:grid-cols-6 gap-y-20 xs:grid-cols-2">
+        <ul class="grid mx-auto my-6 xl:grid-cols-6 gap-y-20 md:grid-cols-4 xs:grid-cols-2">
             {% for topico in topicos %}
                 <li class="flex flex-row items-center h-24 px-2 mt-12">
                     <div class="justify-between w-56 transition duration-300 transform border-2 border-gray-900 shadow-lg opacity-0 bg-gray-50 dark:bg-gray-900 rounded-xl card hover:scale-110 hover:shadow-xl min-h-52">
