--- a/class01/home/templates/home.html
+++ b/class01/home/templates/home.html
@@ -38,9 +38,9 @@
                 </div>
             </div>
 
-            <div id="img-home" class="flex flex-col md:w-1/2 md:h-[600px]">
-                <img src="{% static 'img/pinguim-programador.webp' %}" class="rounded-full" alt="Noot Noot!">
-                <span align="right"><a class="mr-8 text-xs text-gray-900 cursor-pointer dark:text-white" target="_blank" href="https://storyset.com/online">Online illustrations by Storyset</a></span>
+            <div id="img-home" class="flex flex-col md:w-1/2 md:h-fit">
+                <img src="{% static 'img/pinguim-programador.webp' %}" class="rounded-full md:size-10/12" alt="Noot Noot!">
+                <!-- <span align="right"><a class="mr-8 text-xs text-gray-900 cursor-pointer dark:text-white" target="_blank" href="https://storyset.com/online">Online illustrations by Storyset</a></span> -->
             </div>
         </section>
 
