--- a/class01/home/templates/topico.html
+++ b/class01/home/templates/topico.html
@@ -9,77 +9,125 @@
     
     {% block content %}
 
-    <div class="container px-4 py-8 mx-auto">
-        <section class="mb-12">
-            <div class="relative mb-6 overflow-hidden rounded-lg">
-                <img src="{{ current_topic.imagem.url }}" alt="Machine Learning" class="w-full h-[400px] object-cover">
-                <div class="absolute inset-0 flex flex-col justify-end p-6 bg-black bg-opacity-50">
-                    <h1 class="mb-2 text-4xl font-bold text-white">{{ current_topic.nome_topico }}</h1>
-                    <div class="flex flex-wrap gap-2 mb-2">
-                        {% for tag in current_topic.categorias.all %}
-                            <span class="px-2 py-1 text-sm font-semibold text-black bg-white rounded-full dark:bg-gray-600 dark:text-white">{{ tag.nome }}</span>
-                        {% endfor %}
+        <!-- Sidebar -->
+        <!-- <div class="absolute px-1 bg-gray-200 rounded-tr-full rounded-br-full dark:bg-gray-600 w-fit">
+            <button class=" font-medium rounded-lg text-sm px-2 py-2.5 text-gray-900 dark:text-gray-100" type="button" id="menu-btn">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 5.25h16.5m-16.5 4.5h16.5m-16.5 4.5h16.5m-16.5 4.5h16.5" />
+                </svg>              
+                <span class="sr-only">Open sidebar</span>          
+            </button>
+        </div> -->
+
+        <!-- drawer component -->
+        <!-- <div id="drawer-navigation" class="fixed top-0 left-0 z-40 w-64 h-screen p-4 overflow-y-auto transition-transform duration-500 -translate-x-full bg-slate-50 dark:bg-slate-900" tabindex="-1" aria-labelledby="drawer-navigation-label">
+            <div class="flex flex-row justify-between">
+                <h5 id="drawer-navigation-label" class="text-base font-semibold text-white uppercase dark:text-gray-400">Tópicos</h5>
+                <button type="button" id="close-btn" class="right-0 text-white">
+                    <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
+                    <span class="sr-only">Close menu</span>
+                </button>
+            </div>
+            <div class="py-4 overflow-y-auto">
+                <ul class="space-y-2 font-medium">
+                    {% for topico in topicos %}
+                    <li>
+                        <a href="{% url 'exibir_topico' topico.id %}" class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
+                            <img src="{{ topico.icon_topico.url }}" class="w-5" alt="">
+                            <p class="ms-3">{{ topico.nome_topico }}</p>
+                        </a>
+                    </li>
+                    {% endfor %}
+                </ul>
+            </div>
+        </div> -->
+
+        <div class="py-4 mx-auto px-14">
+            <section class="mb-12">
+                <div class="relative mb-6 overflow-hidden rounded-2xl">
+                    <img src="{{ current_topic.imagem.url }}" alt="Machine Learning" class="object-cover h-[600px] w-full">
+                    <div class="absolute inset-0 flex flex-col justify-end p-6 bg-black bg-opacity-25">
+                        <h1 class="mb-2 text-4xl font-bold text-white">{{ current_topic.nome_topico }}</h1>
+                        <div class="flex flex-wrap gap-2 mb-2">
+                            {% for tag in current_topic.categorias.all %}
+                                <span class="px-2 py-1 text-sm font-semibold text-black bg-white rounded-full dark:bg-gray-600 dark:text-white">{{ tag.nome }}</span>
+                            {% endfor %}
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="bg-white rounded-lg shadow-md dark:bg-gray-700 dark:text-white">
-                <div class="p-6 divide-y-2">
-                    <div class="mb-4">
-                        <p class="mb-4 text-lg">{{ current_topic.introducao|safe }}</p>
-                    </div>
-                    <div class="pt-4">
-                        <div class="flex flex-wrap items-center gap-4">
-                            <div class="flex flex-row divide-x-2 divide-gray-200">
-                                <div class="mr-4">
-                                    <h2 class="text-sm font-semibold text-gray-500 dark:text-gray-400">Funções</h2>
-                                    {% for func in current_topic.funcao.all %}
-                                        <p class="text-lg">{{ func.nome }}</p>
-                                    {% endfor %}
+                <div class="bg-white rounded-lg shadow-md dark:bg-gray-700 dark:text-white">
+                    <div class="p-6 divide-y-2">
+                        <div class="mb-4">
+                            <p class="mb-4 text-lg">{{ current_topic.introducao|safe }}</p>
+                        </div>
+                        <div class="pt-4">
+                            <div class="flex flex-wrap items-center gap-4">
+                                <div class="flex flex-row divide-x-2 divide-gray-200">
+                                    <div class="mr-4">
+                                        <h2 class="text-sm font-semibold text-gray-500 dark:text-gray-400">Funções</h2>
+                                        {% for func in current_topic.funcao.all %}
+                                            <p class="text-lg">{{ func.nome }}</p>
+                                        {% endfor %}
+                                    </div>
+                                    <div class="flex flex-col h-auto pl-4 my-auto">
+                                        <h2 class="text-sm font-semibold text-gray-500 dark:text-gray-400">Nível de experiência</h2>
+                                        <p class="text-lg">{{ current_topic.nivel_experiencia }}</p>
+                                    </div>
                                 </div>
-                                <div class="flex flex-col h-auto pl-4 my-auto">
-                                    <h2 class="text-sm font-semibold text-gray-500 dark:text-gray-400">Nível de experiência</h2>
-                                    <p class="text-lg">{{ current_topic.nivel_experiencia }}</p>
-                                </div>
+                                <a href="{{ current_topic.fonte_topic }}" target="_blank" class="px-4 py-2 ml-auto font-bold text-white bg-blue-600 rounded hover:bg-blue-700">
+                                    Acesse e conheça
+                                </a>
                             </div>
-                            <a href="{{ current_topic.fonte_topic }}" target="_blank" class="px-4 py-2 ml-auto font-bold text-white bg-blue-600 rounded hover:bg-blue-700">
-                                Official Website
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section>
+                <h2 class="mb-6 text-3xl font-bold text-center text-gray-900 dark:text-white">Principais ferramentas</h2>
+                <div class="grid gap-8 md:grid-cols-2 lg:grid-cols-3">
+                    {% for ferramenta in ferramentas %}
+                    <div class="flex flex-col overflow-hidden bg-gray-200 border-2 border-gray-300 rounded-lg shadow-md dark:border-0 dark:bg-gray-700">
+                        <div class="p-6">
+                            <h3 class="mb-4 text-2xl font-bold text-gray-900 dark:text-white">{{ ferramenta.nome_ferramenta }}</h3>
+                            <img src="{{ ferramenta.imagem_ferramenta.url }}" alt="TensorFlow" class="object-cover w-full h-48 mb-4 rounded-md">
+                            <p class="mb-4 text-gray-600 dark:text-gray-300">{{ ferramenta.informacao_ferramenta }}</p>
+                            <div class="mb-4 text-black dark:text-gray-50">
+                                <h4 class="mb-2 font-semibold">Key Features:</h4>
+                                <ul class="space-y-1 list-disc list-inside">
+                                    <li>Easy model building</li>
+                                    <li>Robust ML production anywhere</li>
+                                    <li>Powerful experimentation for research</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="p-6 pt-0 mt-auto">
+                            <a href="{{ ferramenta.link_ferramenta }}" class="block w-full px-4 py-2 font-bold text-center text-white bg-blue-600 rounded hover:bg-blue-700">
+                                Saiba mais sobre {{ ferramenta.nome_ferramenta }}
                             </a>
                         </div>
                     </div>
+                    {% endfor %}
                 </div>
-            </div>
-        </section>
-
-        <section>
-            <h2 class="mb-6 text-3xl font-bold text-center text-gray-900 dark:text-white">Principais ferramentas</h2>
-            <div class="grid gap-8 md:grid-cols-2 lg:grid-cols-3">
-                {% for ferramenta in ferramentas %}
-                <div class="flex flex-col overflow-hidden bg-gray-200 border-2 border-gray-300 rounded-lg shadow-md dark:border-0 dark:bg-gray-700">
-                    <div class="p-6">
-                        <h3 class="mb-4 text-2xl font-bold text-gray-900 dark:text-white">{{ ferramenta.nome_ferramenta }}</h3>
-                        <img src="{{ ferramenta.imagem_ferramenta.url }}" alt="TensorFlow" class="object-cover w-full h-48 mb-4 rounded-md">
-                        <p class="mb-4 text-gray-600 dark:text-gray-300">{{ ferramenta.informacao_ferramenta }}</p>
-                        <div class="mb-4 text-black dark:text-gray-50">
-                            <h4 class="mb-2 font-semibold">Key Features:</h4>
-                            <ul class="space-y-1 list-disc list-inside">
-                                <li>Easy model building</li>
-                                <li>Robust ML production anywhere</li>
-                                <li>Powerful experimentation for research</li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="p-6 pt-0 mt-auto">
-                        <a href="{{ ferramenta.link_ferramenta }}" class="block w-full px-4 py-2 font-bold text-center text-white bg-blue-600 rounded hover:bg-blue-700">
-                            Visit {{ ferramenta.nome_ferramenta }}
-                        </a>
-                    </div>
-                </div>
-                {% endfor %}
-            </div>
-        </section>
-    </div>
+            </section>
+        </div>
 
         {% include 'pagination.html' %}
+        
+        {% include 'socials.html' %}
+
+        <script>
+            const menuBtn = document.getElementById('menu-btn');
+            const sidebar = document.getElementById('drawer-navigation');
+            const closeBtn = document.getElementById('close-btn');
+            menuBtn.addEventListener('click', () => {
+                sidebar.classList.toggle('-translate-x-full'); // Toggles the sidebar visibility
+            });
+            
+            closeBtn.addEventListener('click', () => {
+                sidebar.classList.add('-translate-x-full'); // Hides the sidebar
+            });
+        </script>
 
     {% endblock %}
 
